<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/cardview_1"
            android:paddingBottom="5dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="15dp"
            android:layout_height="match_parent">
    <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:text="@string/tvid"
                    android:paddingStart="5dp"
                    android:id="@+id/tvid"
                    android:textSize="18sp"
                    android:fontFamily="serif"
                    android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:id="@+id/txtid"
            android:text="@string/id"
            android:layout_weight="1.5"
            android:paddingStart="5dp"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="2"
    >
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/tvid"
                android:paddingStart="5dp"
                android:id="@+id/tvname"
                android:textSize="18sp"
                android:fontFamily="serif"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/name"
                android:textSize="18sp"
                android:id="@+id/txtname"
                android:paddingStart="5dp"
                android:layout_height="wrap_content"
        />
    </LinearLayout>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/username"
                android:textSize="18sp"
                android:id="@+id/txtusername"
                android:paddingStart="5dp"
                android:layout_height="wrap_content"
        />
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:text="@string/email"
                android:textSize="18sp"
                android:id="@+id/txtemail"
                android:paddingStart="5dp"
                android:layout_height="wrap_content"
        />
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:text="@string/street"
                    android:textSize="18sp"
                    android:id="@+id/txtstreet"
                    android:paddingLeft="5dp"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:text="@string/suite"
                    android:textSize="18sp"
                    android:id="@+id/txtsuite"
                    android:paddingStart="5dp"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:text="@string/city"
                    android:textSize="18sp"
                    android:id="@+id/txtcity"
                    android:paddingStart="5dp"
                    android:layout_height="wrap_content"
            />
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:text="@string/zipcode"
                    android:textSize="18sp"
                    android:id="@+id/txtzipcode"
                    android:paddingStart="5dp"
                    android:layout_height="wrap_content"
            />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>
</LinearLayout>